syntax = "proto3";

package user;

option go_package = "github.com/salman-pathan/go-micro-arch/user";

service User {
    rpc Signup(SignupRequest) returns (SignupResponse) {};
}

message SignupRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string password = 4;
}

message SignupResponse {
    string id = 1;
}